--- a/misukasu-os.vcxproj
+++ b/misukasu-os.vcxproj
@@ -127,12 +127,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Engine\D3DHandler.cpp" />
     <ClCompile Include="src\Engine\ApplicationBase.cpp" />
     <ClCompile Include="src\Engine\Input.cpp" />
     <ClCompile Include="src\Engine\Engine.cpp" />
     <ClCompile Include="src\Application\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Engine\D3DHandler.h" />
     <ClInclude Include="src\Engine\ApplicationBase.h" />
     <ClInclude Include="src\Engine\Input.h" />
     <ClInclude Include="src\Engine\Engine.h" />
