--- a/misukasu-os.vcxproj.filters
+++ b/misukasu-os.vcxproj.filters
@@ -5,10 +5,12 @@
     <ClCompile Include="src\Engine\Engine.cpp" />
     <ClCompile Include="src\Engine\Input.cpp" />
     <ClCompile Include="src\Engine\ApplicationBase.cpp" />
+    <ClCompile Include="src\Engine\D3DHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Engine\Engine.h" />
     <ClInclude Include="src\Engine\Input.h" />
     <ClInclude Include="src\Engine\ApplicationBase.h" />
+    <ClInclude Include="src\Engine\D3DHandler.h" />
   </ItemGroup>
 </Project>
